@@ -71,9 +71,9 @@ public class TaskExecuteImpl implements TaskExecute, ApplicationContextAware {
             return;
         }
         // 需要异步执行的人任务
-        List<Task> asyncList = list.stream().filter(Task::getAsync).collect(Collectors.toList());
+        List<Task> asyncList = list.stream().filter(Task::getAsync).toList();
         // 需要同步执行的任务
-        List<Task> commonList = list.stream().filter(p -> !p.getAsync()).collect(Collectors.toList());
+        List<Task> commonList = list.stream().filter(p -> !p.getAsync()).toList();
         // 异步执行开始
         asyncList.forEach(asyncTask -> executor.submit(() -> doPushEvent(asyncTask)));
         // 同步执行开始
